# videoedit

./: .gitignore  BACKLOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  mkdocs.yml  nextstep.txt  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_SESSION.md  BASH.md  CONCAT_PLAYLIST_GUIDE.md  CONTRIBUTING_COMMANDS.md  MANIFESTS.md  POWERSHELL.md  QUICKSTART.md  TEST_PLAN.md  USAGE.md  VISION.md  index.md
docs/commands/: assemble.md  concat.md  extract_audio.md  plan.md  probe.md  trim.md  validate.md
docs/javascripts/: mermaid-init.js
examples/bash/: assemble-playlist.sh  concat-folder-preview.sh  concat-playlist.sh  probe-video.sh  trim-video.sh
examples/manifests/: concat-playlist.v1.json  cut-list.v1.json  playlist.json  timeline.v1.json
examples/powershell/: assemble-playlist.ps1  concat-folder-preview.ps1  concat-playlist.ps1  probe-video.ps1  trim-video.ps1
examples/python/: basic_trim.py  concat_playlist_workflow.py  probe_metadata.py  service_usage.py
src/video_editing_cli/: __init__.py  __main__.py  assembly.py  cli.py  ffmpeg.py  manifests.py  operations.py  service.py
src/videoedit/: __init__.py  adapters.py  assembly.py  audio.py  cli.py  ffmpeg.py  layout.py  manifests.py  media.py  models.py  (+2 more)
tests/: conftest.py  test_assemble.py  test_command_coverage.py  test_concat.py  test_concat_workflow.py  test_extract_audio.py  test_golden_workflows.py  test_integration_rendering.py  test_manifests.py  test_plan.py  test_probe.py  test_render_paths.py  test_service.py  test_trim.py  test_validate.py
(+28 files in other folders)
